--- a/composeApp/src/wasmJsMain/resources/index.html
+++ b/composeApp/src/wasmJsMain/resources/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/ic_icon.png">
     <script type="application/javascript" src="composeApp.js"></script>
 </head>
 <body>
