feat: 페이지 타이틀 수정

--- a/composeApp/src/wasmJsMain/resources/index.html
+++ b/composeApp/src/wasmJsMain/resources/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>포트폴리오 | 김한식</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="/ic_icon.png">
     <script type="application/javascript" src="composeApp.js"></script>
