--- a/composeApp/src/wasmJsMain/resources/index.html
+++ b/composeApp/src/wasmJsMain/resources/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>김한식 | Android Developer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포트폴리오 | 김한식</title>
+    <meta name="description" content="안드로이드 개발자 김한식 | 포트폴리오">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="김한식 | Android Developer">
+    <meta property="og:description" content="안드로이드 개발자 김한식 | 포트폴리오">
+    <meta property="og:image" content="/img_cover.png" />
+    <meta property="og:url" content="https://imaec.github.io/" />
     <link type="text/css" rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="/ic_icon.png">
     <script type="application/javascript" src="composeApp.js"></script>
